tests/kubernetes/custom-4.5.1/compliant/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: compliant-pod
spec:
  containers:
    - name: nginx
      image: nginx:latest
